// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`characterisation: playback across midnight > playing across midnight increments currentDay and keeps offsets 1`] = `
{
  "_end": {
    "accumulatedGap": 0,
    "event": {
      "dayOffset": 1,
      "delay": 0,
      "duration": 1800000,
      "gap": 0,
      "id": "night3",
      "parent": null,
      "revision": 1,
      "skip": false,
      "timeEnd": 3600000,
      "timeStart": 1800000,
      "type": "event",
    },
    "isLinkedToLoaded": undefined,
  },
  "_flag": null,
  "_group": null,
  "_rundown": {
    "totalDelay": 0,
  },
  "_startDayOffset": 0,
  "_startEpoch": 978734100000,
  "_timer": {
    "forceFinish": null,
    "hasFinished": false,
    "pausedAt": null,
    "secondaryTarget": null,
  },
  "clock": 600000,
  "eventFlag": null,
  "eventNext": {
    "dayOffset": 1,
    "delay": 0,
    "duration": 1800000,
    "gap": 0,
    "id": "night3",
    "parent": null,
    "revision": 1,
    "skip": false,
    "timeEnd": 3600000,
    "timeStart": 1800000,
    "type": "event",
  },
  "eventNow": {
    "dayOffset": 0,
    "delay": 0,
    "duration": 3600000,
    "gap": 0,
    "id": "night2",
    "parent": null,
    "revision": 1,
    "skip": false,
    "timeEnd": 1800000,
    "timeStart": 84600000,
    "type": "event",
  },
  "groupNow": null,
  "offset": {
    "absolute": 300000,
    "expectedFlagStart": null,
    "expectedGroupEnd": null,
    "expectedRundownEnd": 3900000,
    "mode": "absolute",
    "relative": -5400000,
  },
  "rundown": {
    "actualGroupStart": null,
    "actualStart": 84900000,
    "currentDay": 1,
    "numEvents": 3,
    "plannedEnd": 90000000,
    "plannedStart": 79200000,
    "selectedEventIndex": 1,
  },
  "timer": {
    "addedTime": 0,
    "current": 1500000,
    "duration": 3600000,
    "elapsed": 2100000,
    "expectedFinish": 2100000,
    "phase": "default",
    "playback": "play",
    "secondaryTimer": null,
    "startedAt": 84900000,
  },
}
`;

exports[`characterisation: roll mode > roll into overnight event after midnight backdates start metadata 1`] = `
{
  "_end": {
    "accumulatedGap": 0,
    "event": {
      "dayOffset": 1,
      "delay": 0,
      "duration": 1800000,
      "gap": 0,
      "id": "night3",
      "parent": null,
      "revision": 1,
      "skip": false,
      "timeEnd": 3600000,
      "timeStart": 1800000,
      "type": "event",
    },
    "isLinkedToLoaded": undefined,
  },
  "_flag": null,
  "_group": null,
  "_rundown": {
    "totalDelay": 0,
  },
  "_startDayOffset": 0,
  "_startEpoch": 978733800000,
  "_timer": {
    "forceFinish": null,
    "hasFinished": false,
    "pausedAt": null,
    "secondaryTarget": null,
  },
  "clock": 300032,
  "eventFlag": null,
  "eventNext": {
    "dayOffset": 1,
    "delay": 0,
    "duration": 1800000,
    "gap": 0,
    "id": "night3",
    "parent": null,
    "revision": 1,
    "skip": false,
    "timeEnd": 3600000,
    "timeStart": 1800000,
    "type": "event",
  },
  "eventNow": {
    "dayOffset": 0,
    "delay": 0,
    "duration": 3600000,
    "gap": 0,
    "id": "night2",
    "parent": null,
    "revision": 1,
    "skip": false,
    "timeEnd": 1800000,
    "timeStart": 84600000,
    "type": "event",
  },
  "groupNow": null,
  "offset": {
    "absolute": 0,
    "expectedFlagStart": null,
    "expectedGroupEnd": null,
    "expectedRundownEnd": 3600000,
    "mode": "absolute",
    "relative": -5400000,
  },
  "rundown": {
    "actualGroupStart": null,
    "actualStart": 84600000,
    "currentDay": 1,
    "numEvents": 3,
    "plannedEnd": 90000000,
    "plannedStart": 79200000,
    "selectedEventIndex": 1,
  },
  "timer": {
    "addedTime": 0,
    "current": 1499968,
    "duration": 3600000,
    "elapsed": 2100032,
    "expectedFinish": 1800000,
    "phase": "default",
    "playback": "roll",
    "secondaryTimer": null,
    "startedAt": 84600000,
  },
}
`;

exports[`characterisation: timed playback > late start: absolute and relative offsets with gap compensation 1`] = `
{
  "_end": {
    "accumulatedGap": 1200000,
    "event": {
      "dayOffset": 0,
      "delay": 0,
      "duration": 600000,
      "gap": 600000,
      "id": "flat4",
      "parent": null,
      "revision": 1,
      "skip": false,
      "timeEnd": 39600000,
      "timeStart": 39000000,
      "type": "event",
    },
    "isLinkedToLoaded": undefined,
  },
  "_flag": {
    "accumulatedGap": 0,
    "event": {
      "dayOffset": 0,
      "delay": 0,
      "duration": 600000,
      "flag": true,
      "gap": 0,
      "id": "flat2",
      "linkStart": true,
      "parent": null,
      "revision": 1,
      "skip": false,
      "timeEnd": 37200000,
      "timeStart": 36600000,
      "type": "event",
    },
    "isLinkedToLoaded": true,
  },
  "_group": null,
  "_rundown": {
    "totalDelay": 0,
  },
  "_startDayOffset": 0,
  "_startEpoch": 978685500000,
  "_timer": {
    "forceFinish": null,
    "hasFinished": false,
    "pausedAt": null,
    "secondaryTarget": null,
  },
  "clock": 36300000,
  "eventFlag": {
    "dayOffset": 0,
    "delay": 0,
    "duration": 600000,
    "flag": true,
    "gap": 0,
    "id": "flat2",
    "linkStart": true,
    "parent": null,
    "revision": 1,
    "skip": false,
    "timeEnd": 37200000,
    "timeStart": 36600000,
    "type": "event",
  },
  "eventNext": {
    "dayOffset": 0,
    "delay": 0,
    "duration": 600000,
    "flag": true,
    "gap": 0,
    "id": "flat2",
    "linkStart": true,
    "parent": null,
    "revision": 1,
    "skip": false,
    "timeEnd": 37200000,
    "timeStart": 36600000,
    "type": "event",
  },
  "eventNow": {
    "dayOffset": 0,
    "delay": 0,
    "duration": 600000,
    "gap": 0,
    "id": "flat1",
    "parent": null,
    "revision": 1,
    "skip": false,
    "timeDanger": 60000,
    "timeEnd": 36600000,
    "timeStart": 36000000,
    "timeWarning": 120000,
    "type": "event",
  },
  "groupNow": null,
  "offset": {
    "absolute": 300000,
    "expectedFlagStart": 36900000,
    "expectedGroupEnd": null,
    "expectedRundownEnd": 39900000,
    "mode": "relative",
    "relative": 0,
  },
  "rundown": {
    "actualGroupStart": null,
    "actualStart": 36300000,
    "currentDay": 0,
    "numEvents": 4,
    "plannedEnd": 39600000,
    "plannedStart": 36000000,
    "selectedEventIndex": 0,
  },
  "timer": {
    "addedTime": 0,
    "current": 600000,
    "duration": 600000,
    "elapsed": 0,
    "expectedFinish": 36900000,
    "phase": "default",
    "playback": "play",
    "secondaryTimer": null,
    "startedAt": 36300000,
  },
}
`;
